// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should check AnnotationsContainer component behaviour Should display annotation 1`] = `
<DocumentFragment>
  <div
    class="annotation__top-toolbar"
  >
    <button
      class="btn af-btn af-btn--hasiconLeft af-btn--disabled"
      disabled=""
    >
      <span
        class="af-btn__text"
      >
        Previous
      </span>
      <i
        class="glyphicon glyphicon-arrowthin-left"
      />
    </button>
    <span
      class="annotation__top-toolbar-text"
    />
    <button
      class="btn af-btn af-btn--hasiconRight"
    >
      <span
        class="af-btn__text"
      >
        Next
      </span>
      <i
        class="glyphicon glyphicon-arrowthin-right"
      />
    </button>
  </div>
  <div>
    Loading...
  </div>
</DocumentFragment>
`;

exports[`Should check AnnotationsContainer component behaviour Should display annotation 2`] = `
<DocumentFragment>
  <div
    class="annotation__top-toolbar"
  >
    <button
      class="btn af-btn af-btn--hasiconLeft af-btn--disabled"
      disabled=""
    >
      <span
        class="af-btn__text"
      >
        Previous
      </span>
      <i
        class="glyphicon glyphicon-arrowthin-left"
      />
    </button>
    <span
      class="annotation__top-toolbar-text"
    />
    <button
      class="btn af-btn af-btn--hasiconRight"
    >
      <span
        class="af-btn__text"
      >
        Next
      </span>
      <i
        class="glyphicon glyphicon-arrowthin-right"
      />
    </button>
  </div>
  <div
    class="image-classifier"
  >
    <div
      class="image-classifier__buttons-container"
    >
      <div
        class="image-classifier__button-container"
      >
        <button
          class="btn af-btn"
          style="background-color: rgb(107, 149, 27); box-shadow: none;"
        >
          Firstname
        </button>
      </div>
    </div>
    <div
      class="image-classifier__image-container"
    >
      <img
        alt="Classifier image"
        class="image-classifier__image"
        src=""
      />
    </div>
  </div>
</DocumentFragment>
`;
